--- a/java0122.md
+++ b/java0122.md
@@ -5,3 +5,27 @@ javac Hello.java 를 이용해 컴파일한다.
 > Hello.class가 생성된다.
 
 java Hello로 실행
+
+
+*** Java의 타입
+
+**primitive data type**
+
+byte 1
+short 2
+int 4
+long 8
+
+float 4
+double 8
+
+boolean 1
+
+char 2
+
+Reference data type
+
+Array
+Class
+Interface
+> 몇바이트인지는 정해지지않았다.
