--- a/java0122.md
+++ b/java0122.md
@@ -11,21 +11,21 @@ java Hello로 실행
 
 **primitive data type**
 
-byte 1
-short 2
-int 4
-long 8
+-byte 1
+-short 2
+-int 4
+-long 8
 
-float 4
-double 8
+-float 4
+-double 8
 
-boolean 1
+-boolean 1
 
-char 2
+-char 2
 
-Reference data type
+**Reference data type**
 
-Array
-Class
-Interface
+-Array
+-Class
+-Interface
 > 몇바이트인지는 정해지지않았다.
