--- a/java0122.md
+++ b/java0122.md
@@ -11,16 +11,17 @@ java Hello로 실행
 
 **primitive data type**
 
+**정수형**
 - byte 1
 - short 2
 - int 4
 - long 8
-
+**실수형**
 - float 4
 - double 8
-
+**논리형**
 - boolean 1
-
+**문자형**
 - char 2
 
 **Reference data type**
