--- a/java0123.md
+++ b/java0123.md
@@ -5,3 +5,12 @@ Array :
 
 - 같은 타입 변수의 순서적 나열
 - 선언과 동시에 크기가 결정되어지고 크기를 변경할 수 없다.
+
+```
+  // Java에서 배열의 길이를 알 수 있다.
+  arr.lenth
+  
+  // 10개 공간의 arr배열이 생성된다.
+  // arr의 타입은 int형 Array 타입이라고 한다!
+  int []arr = new int[10]
+```
