--- a/java0123.md
+++ b/java0123.md
@@ -14,3 +14,25 @@ Array :
   // arr의 타입은 int형 Array 타입이라고 한다!
   int []arr = new int[10]
 ```
+
+> **힙:**
+> 힙은 스택에 비하여 큰 공간을 가지고 있으며
+> 부족할 시 OS에 더 공간을 요청해서 만들 수 있다.
+
+------------
+
+**class배열** 
+```
+  public static void main(String[] args){
+    class Customer{
+      String name;
+    }
+    
+    Customer[] arr = new Customer[2];
+    
+    
+    // Null Point Exception 발생
+    // class 배열을 생성하고 지역변수로 초기화를 하지 않았을때...
+    // 즉, 힙을 만들어 놓고 초기화를 않했을때 에러가 발생할 수 있다.
+  }
+```
