--- a/java0123.md
+++ b/java0123.md
@@ -36,3 +36,33 @@ Array :
     // 즉, 힙을 만들어 놓고 초기화를 않했을때 에러가 발생할 수 있다.
   }
 ```
+**example**
+```
+  import java.util.ArrayList;
+
+  public class Main01 {
+    // Array
+    // 정의 : 같은 데이터의 순서적 나열
+    // 특성 : 선언과 동시에 크기가 결정되어지고 크기가 변경될 수 없다.
+    // 배열을 선언하면 기본값으로 초기화가 일어난다.
+    // 멤버 배열은 디폴트 초기화가 일어나고, 지역 배열은 초기화가 일어나지 않는다.
+    // 정수 : 0, 실수 : 0.0, 문자 : /u0000, 참조(reference) : null
+    public static void main(String[] args) {
+      int kuk = 100, math = 90, eng = 80;
+      // heap 사용
+      int[] jumsu = new int[3];
+      jumsu[0] = 100;
+      jumsu[1] = 90;
+      jumsu[2] = 80;
+
+      ArrayList a =new ArrayList<>();
+      // ArrayList는 상태가 계속해서 바뀌기 때문에 size()함수를 사용
+      a.size();
+      // Array는 크기가 정해져 있기 때문에 length변수를 사용
+      for(int i=0;i<jumsu.length;i++) {
+        System.out.println(jumsu[i]);
+      }
+      System.out.println(Arrays.toString(jumsu));
+    }
+  }
+```
