--- a/java0123.md
+++ b/java0123.md
@@ -66,3 +66,64 @@ Array :
     }
   }
 ```
+
+**example2**
+```
+  package ssafy.chap02;
+
+  import java.util.ArrayList;
+  import java.util.Arrays;
+
+  public class Main01 {
+    // Array
+    // 정의 : 같은 데이터의 순서적 나열
+    // 특성 : 선언과 동시에 크기가 결정되어지고 크기가 변경될 수 없다.
+    // 배열을 선언하면 기본값으로 초기화가 일어난다.
+    // 멤버 배열은 디폴트 초기화가 일어나고, 지역 배열은 초기화가 일어나지 않는다.
+    // 정수 : 0, 실수 : 0.0, 문자 : /u0000, 참조(reference) : null
+    public static void main(String[] args) {
+      int kuk = 100, math = 90, eng = 80;
+      // heap 사용
+      int[] jumsu = new int[3];
+      jumsu[0] = 100;
+      jumsu[1] = 90;
+      jumsu[2] = 80;
+
+      ArrayList a =new ArrayList<>();
+      // ArrayList는 상태가 계속해서 바뀌기 때문에 size()함수를 사용
+      a.size();
+      // Array는 크기가 정해져 있기 때문에 length변수를 사용
+      for(int i=0;i<jumsu.length;i++) {
+        System.out.println(jumsu[i]);
+      }
+      System.out.println(Arrays.toString(jumsu));
+
+      change(kuk, jumsu);
+      // call by value (primitive data type)
+      // (함수에서 값 변경시 메인에서 변경되지않는다)
+      System.out.println("Main = " + kuk);
+      // call by reference (reference data type)
+      // 이때는 점수의 해쉬코드값이 복사되어지기 때문에 함수에서 변경시 메인에 적용된다
+      System.out.println("Main jumsu[0] = " + jumsu[0]);
+
+      // Member type 배열 생성
+      Member[] mems = new Member[2];
+      // main에 객체를 생성하면 NullPointerException 발생 X
+      mems[0] = new Member();
+      // NullPointerException
+      System.out.println(mems[0].name);
+
+    }
+    private static void change(int k, int[] aj) {
+      k++;
+      System.out.println("Change = " + k);
+      aj[0]++;
+      System.out.println("Change aj[0] = " + aj[0]);
+    }
+  }
+  // Member class 생성
+  class Member{
+    public String name;
+  }
+```
+
