--- a/java0123.md
+++ b/java0123.md
@@ -127,3 +127,11 @@ Array :
   }
 ```
 
+### JAVA의 가비지 컬렉터
+
+> VM의 일
+
+- 가비지 컬렉터는  heap에 객체들이 많이 쌓여서 더이상 채울 공간이 없을 때 heap을 청소한다.
+- 이때 각 객체마다 존재하는 reference couter를 이용한다.
+- 어떤 객체를 사용하지 않을 때 reference couter가 점점 줄어들고 마침내 0이되면 가비지 컬렉터가 작동하여 해당 객체를 청소한다.
+
