--- a/java0123.md
+++ b/java0123.md
@@ -135,3 +135,34 @@ Array :
 - 이때 각 객체마다 존재하는 reference couter를 이용한다.
 - 어떤 객체를 사용하지 않을 때 reference couter가 점점 줄어들고 마침내 0이되면 가비지 컬렉터가 작동하여 해당 객체를 청소한다.
 
+
+```
+  public class Example01 {
+    public static void main(String[] args) {
+      int arr[][] = new int[10][10];
+
+      Scanner sc = new Scanner(System.in);
+      System.out.println("R과 C의 값을 입력해주세요 :");
+      int r = sc.nextInt();
+      int c = sc.nextInt();
+
+  //		if(c != 0) arr[r][c-1]++;
+  //		if(c != 9) arr[r][c+1]++;
+  //		if(r != 0) arr[r-1][c]++;
+  //		if(r != 9) arr[r+1][c]++;
+
+      int[] dr = {0, 0, 1, -1};
+      int[] dc = {1, -1, 0, 0};
+      for(int i=0;i<4;i++) {
+        int nr = r + dr[i];
+        int nc = c + dc[i];
+        if(nr >=0 && nr < 10 && nc >= 0 && nc < 10)
+          arr[nr][nc] = 1;
+      }
+      for(int i=0;i<arr.length;i++) {
+        System.out.println(Arrays.toString(arr[i]));
+      }
+
+    }
+  }
+```
