--- a/java0206.md
+++ b/java0206.md
@@ -5,3 +5,14 @@
 1. 확장성을 위해
 2. 다형성을 위해
 3. 메소드의 재정의
+
+### super
+
+1. method에서 사용할 수 있다.
+2. method를 가진얘가 상속받고 있는 클래스에서 사용.
+3. 부모클래스로 가려면 자식클래스에서 super를 사용해야한다.
+4. 부모의 부모클래스로 가려면 자식클래스에서 super를 사용하고 부모클래스에도 super를 사용해야한다.
+
+```
+super(int i, String str, int j);
+```
