--- a/java0206.md
+++ b/java0206.md
@@ -16,3 +16,10 @@
 ```
 super(int i, String str, int j);
 ```
+
+메인에서 객체를 생성할 때:
+
+1. 해당 클래스에서 인자가 동일한 생성자를 호출한다.
+2. 상속받고 있다면 상속해준 클래스의 생성자를 호출한다.(이때 기본생성자를 호출해준다.);
+
+부모클래스는 Object를 상속받고 싶다.
