--- a/java0206.md
+++ b/java0206.md
@@ -27,3 +27,7 @@ super(int i, String str, int j);
 ### 싱글 inheritance
 
 자바는 단일 클래스만 상속받을 수 있다.
+
+### 다형성이란
+
+> 다형성이란 다양한 형태가 아니라 어떠한 객체를 바라보는 시각을 다르게 하는 것이다.
