--- a/java0207.md
+++ b/java0207.md
@@ -1,1 +1,144 @@
+**Member.java**
+```
+package ssafy.chap07;
 
+public class Member {
+	String name;
+	int age;
+	
+	public Member(String name, int age) {
+		super();
+		this.name = name;
+		this.age = age;
+	}
+	
+	// 값이 같으면 같은것으로 만들기
+	@Override
+	public boolean equals(Object obj) {
+		if(obj instanceof Member) {
+			Member m = (Member)obj;
+			if(this.name.equals(m.name) && this.age == m.age)
+				return true;
+			else return false;
+		}
+		return super.equals(obj);
+	}
+	
+}
+
+```
+
+**Main.java**
+```
+package ssafy.chap07;
+
+public class Main {
+
+	public static void main(String[] args) {
+		// TODO Auto-generated method stub
+		Member m1 = new Member("홍길동", 21);
+		Member m2 = new Member("홍길동", 21);
+		
+		// 주소가 같아야 same이 나온다.
+		if(m1 == m2) {
+			System.out.println("It is same");
+		}
+		else {
+			System.out.println("It isn't same");
+		}
+		// equals 메소드가 구현되어져 있기때문에
+		// same이 나온다.
+		if(m1.equals(m2)) {
+			System.out.println("It is same");
+		}
+		else {
+			System.out.println("It isn't same");
+		}
+	}
+
+}
+
+```
+
+
+```
+package ssafy.chap07;
+
+public class Main02 {
+	public static void main(String[] args) {
+		String s1 = new String("ssafy");
+		String s2 = new String("ssafy");
+		String s3 = "ssafy";
+		String s4 = "ssafy";
+		
+		// 이와 같이 넣으면 s3와 s4의 해쉬값이 달라진다.
+		s3 = s3 + s4;
+		
+		if(s1 == s2)System.out.println("같다");
+		else System.out.println("다르다");
+		
+		if(s1.equals(s3)) System.out.println("같다");
+		else System.out.println("다르다");
+		
+		// s4에 값이 전해질때  s3의 주소값을 가져와 넣는다.
+		// 주소값이 같기 때문에 '=='를 사용하면 동일하다고 이해한다.
+		if(s3 == s4) System.out.println("같다");
+		else System.out.println("다르다");
+	}
+}
+
+```
+
+
+```
+package ssafy.chap07;
+
+public class Main03 {
+	public static void main(String[] args) {
+//		String s = "s";
+//		String s1 = "s";
+//		String s2 = "a";
+//		String s3 = "f";
+//		String s4 = "y";
+//		double start = System.currentTimeMillis();
+//		for(int i=0;i<100000;i++) {
+//			s += s1;
+//			s += s2;
+//			s += s3;
+//			s += s4;
+//		}
+//		
+//		double end = System.currentTimeMillis();
+//		System.out.println("time 1 : " + (end-start));
+//		
+//		StringBuilder sb = new StringBuilder();
+//		
+//		start = System.currentTimeMillis();
+//		for(int i=0;i<100000;i++) {
+//			sb.append("s");
+//			sb.append("s");
+//			sb.append("a");
+//			sb.append("f");
+//			sb.append("y");
+//		}
+//		
+//		end = System.currentTimeMillis();
+//		System.out.println("time 2 : " + (end-start));
+//		
+		// 문자열의 길이
+		/**
+		 * 문자열의 길이를 구할 때에는 lenth()함수를 사용하고
+		 * 배열의 길이를 구할때에는 lenth를 사용한다.
+		 * 리스트의 크기를 구할때에는 size()를 이용한다.
+		 * */
+		
+		
+		/** Example */
+	}
+}
+
+```
+
+### Math
+
+static이 메소드에 붙으면 객체생성없이 이용할 수 있다.
